# Procesamiento_Imagenes

./: CMakeLists.txt  Image.cpp  Image.h  LICENSE  Pixel.cpp  Pixel.h  Procesamiento_Imagenes_es_MX.ts  README.md  dialog.cpp  dialog.h  dialog.ui  image.cpp  image.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixel.cpp  pixel.h
